--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 			<groupId>bukkit.org</groupId>
 			<artifactId>craftbukkit</artifactId>
 			<scope>system</scope>
-			<systemPath>${server.jars}/craftbukkit-1.7.9-R0.3-20140705.002733-4.jar</systemPath>
+			<systemPath>${server.jars}/craftbukkit-1.7.9.jar</systemPath>
 			<version>1.7.9</version>
 		</dependency>
 		<dependency>
@@ -182,7 +182,7 @@
 			<groupId>spigotmc.org</groupId>
 			<artifactId>spigot-1649</artifactId>
 			<scope>system</scope>
-			<systemPath>${server.jars}/spigot-1649.jar</systemPath>
+			<systemPath>${server.jars}/spigot-1.7.10.jar</systemPath>
 			<version>1.7.10</version>
 		</dependency>
 	</dependencies>
